# WanderingClouds

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
include/: clock.h  controller.h  ibo.h  navigator.h  quad.h  shader.h  texture.h  uniform.h  vao.h  vbo.h  vec.h  window.h
resources/shaders/: default.frag  default.vert
src/: clock.cc  controller.cc  ibo.cc  navigator.cc  quad.cc  shader.cc  texture.cc  uniform.cc  vao.cc  vbo.cc  vec.cc  window.cc
